# knowledge_graph_mcp

./: .gitignore  README.md  pyproject.toml
docs/: neo4j_import_model.json
knowledge_graph/: .gitignore  dbt_project.yml  example_dbt_build.sh
knowledge_graph/macros/: select_relationships_by_type.sql
knowledge_graph/models/marts/knowledge_graph/: _knowledge_graph__models.yml  graph_associates_with_relationships.sql  graph_binding_relationships.sql  graph_biomarker_relationships.sql  graph_causes_no_change_relationships.sql  graph_decreases_relationships.sql  graph_increases_relationships.sql  graph_nodes.sql  graph_regulates_relationships.sql  graph_treats_relationships.sql
knowledge_graph/models/staging/galactic_data/: _galactic_data__models.yml  _galactic_data__sources.yml  stg_galactic_data__consolidated_relationships.sql  stg_galactic_data__relationship_entity_statistics.sql
